# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  20 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  +app-emulation/vmware-player/files/1.0.5.56455/000_all_initd-location.patc
  h,
  +app-emulation/vmware-player/files/1.0.5.56455/001_all_fix-permissions.pat
  ch,
  +app-emulation/vmware-player/files/1.0.5.56455/002_all_pagebreak-detection
  -fix.patch,
  +app-emulation/vmware-player/files/1.0.5.56455/004_all_do-not-build-module
  s.patch,
  +app-emulation/vmware-player/files/1.0.5.56455/007_all_use-modprobe-over-i
  nsmod.patch,
  +app-emulation/vmware-workstation/files/5.5.5.56455/000_all_initd-location
  .patch,
  +app-emulation/vmware-workstation/files/5.5.5.56455/001_all_fix-permission
  s.patch,
  +app-emulation/vmware-player/files/1.0.5.56455/009_all_init.d-modules-warn
  ing.patch,
  +app-emulation/vmware-workstation/files/5.5.5.56455/002_all_pagebreak-dete
  ction-fix.patch,
  +app-emulation/vmware-workstation/files/5.5.5.56455/004_all_do-not-build-m
  odules.patch,
  +app-emulation/vmware-workstation/files/5.5.5.56455/007_all_use-modprobe-o
  ver-insmod.patch,
  +app-emulation/vmware-workstation/files/5.5.5.56455/009_all_init.d-modules
  -warning.patch, -app-emulation/vmware-workstation/metadata.xml:
  Added a new version of VMware Workstation 5.5 and VMware Player 1.0 for
  testing.

  19 Sep 2007; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-modules/files/1.0.0.16-kernel-2.6.22.patch :
  Version bump vmware-modules because vmware changed it, yet again.

  19 Sep 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-player/files/2.0.1.55017/011_all_legit-modules-only.
  patch:
  Fix up extra check in vmware-config.pl

  19 Sep 2007; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-workstation/files/6.0.1.55017/011_all_legit-modules-
  only.patch:
  Fix up extra check in vmware-config.pl.

  19 Sep 2007; Mike Auty <ikelos@gentoo.org> ++, ++,