@@ -2,10 +2,14 @@ AUX disable-toolbox.patch 4995 RMD160 dcce189c748f6e718d822a05f3fa96196cc9b7fd S
 MD5 022ffa4cf3d85c2faf8a60e672b6d5a8 files/disable-toolbox.patch 4995
 RMD160 dcce189c748f6e718d822a05f3fa96196cc9b7fd files/disable-toolbox.patch 4995
 SHA256 337bdc179a32495e12931daf2f9c5438cb0dd08ee1009feb905d7f84c3d8115b files/disable-toolbox.patch 4995
-AUX open-vm.initd 1625 RMD160 7ba5768742701c88007396ec4820317dcc0fdf08 SHA1 85837612855136e2a4510b005dae9c8a8b7ab7a8 SHA256 cd4d98204c02c6e6469181791ebdbc546255df3c0986865525e3a86ea1751442
-MD5 e22f9215280f9b35f9901279160b42ad files/open-vm.initd 1625
-RMD160 7ba5768742701c88007396ec4820317dcc0fdf08 files/open-vm.initd 1625
-SHA256 cd4d98204c02c6e6469181791ebdbc546255df3c0986865525e3a86ea1751442 files/open-vm.initd 1625
+AUX open-vm.confd 88 RMD160 5e398024e72a871f258d73e09f02e37a815443b0 SHA1 56133c21c6d29243ac81a9c1ada61616778f3ce2 SHA256 180a2b6d9d18af319b79b2ca6ebf1020b63e5ebf2f601a63c1a9f9f7d2e0b95c
+MD5 2570d31a242f40eae8f8f2517536dd5f files/open-vm.confd 88
+RMD160 5e398024e72a871f258d73e09f02e37a815443b0 files/open-vm.confd 88
+SHA256 180a2b6d9d18af319b79b2ca6ebf1020b63e5ebf2f601a63c1a9f9f7d2e0b95c files/open-vm.confd 88
+AUX open-vm.initd 1750 RMD160 7efffd1797624c2e917be85f00b2772d5b986c4e SHA1 c294926f4ad97fa20075b0a6a4b2d838378b6958 SHA256 3a810a5e43ab66dca1c05cb28883f8180977d5a5ed25b49cf8da0d0c87e5b51b
+MD5 c1903eb03ea7f124c63df2128ea6e2a9 files/open-vm.initd 1750
+RMD160 7efffd1797624c2e917be85f00b2772d5b986c4e files/open-vm.initd 1750
+SHA256 3a810a5e43ab66dca1c05cb28883f8180977d5a5ed25b49cf8da0d0c87e5b51b files/open-vm.initd 1750
 AUX tools.conf 21 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b SHA1 42a670b887751dbe9317624dd11068390d1780b0 SHA256 05dcb62e54991ca5546066e4d04b50be98fb0cc229168d4d73df8cf8a94c068c
 MD5 818939e99413089dff7a2ab1a660e439 files/tools.conf 21
 RMD160 88b5b8c8e088333e9c00b2e1c3f3572553342e7b files/tools.conf 21
@@ -15,10 +19,10 @@ MD5 1fc0cea9b2ea2303cd2346843dc08803 files/xautostart.conf 59
 RMD160 ca1ea3f1b82caa6e97d94835d88a39a6f153ff7a files/xautostart.conf 59
 SHA256 13398e0ffcd7005bc8c92f3cd62865d2601e52fc980a4702fa252bef5c1efcc7 files/xautostart.conf 59
 DIST open-vm-tools-2007.09.04-56574.tar.gz 1987725 RMD160 8bb9952471ff5635e70741afd357170b6c0a8307 SHA1 d3ffcd974e67b5f83b760582f8c2606721d94403 SHA256 4e4a5c805ffcbcf8de9deca9b96dd874d2be405a994729a4becf3501b73b46bc
-EBUILD open-vm-tools-0.0.20070904.56574.ebuild 3804 RMD160 12465597beac5177d98116906cf04232807f0a3f SHA1 053ecc1a97eddcf940c205e587881a007b127bc0 SHA256 286fb07c4491d9e15f5f5b744a18b696f6bd789f1c9d9c02714bdf6e7da68dba
-MD5 7b80f94d78b94e837c7c70514d47f67b open-vm-tools-0.0.20070904.56574.ebuild 3804
-RMD160 12465597beac5177d98116906cf04232807f0a3f open-vm-tools-0.0.20070904.56574.ebuild 3804
-SHA256 286fb07c4491d9e15f5f5b744a18b696f6bd789f1c9d9c02714bdf6e7da68dba open-vm-tools-0.0.20070904.56574.ebuild 3804
+EBUILD open-vm-tools-0.0.20070904.56574.ebuild 3853 RMD160 8d1dcf1160d14f2e4d7dd7e36d38b4f20ba7ddd5 SHA1 3371d21ddc96d2560c26237a4d3b2e155d90fbd9 SHA256 745dbe2ddbd338b3771916538e09e22a908dd1d937ef016acc38f5316ced35f3
+MD5 1c832bc693d7ffdee50ef4b625068b75 open-vm-tools-0.0.20070904.56574.ebuild 3853
+RMD160 8d1dcf1160d14f2e4d7dd7e36d38b4f20ba7ddd5 open-vm-tools-0.0.20070904.56574.ebuild 3853
+SHA256 745dbe2ddbd338b3771916538e09e22a908dd1d937ef016acc38f5316ced35f3 open-vm-tools-0.0.20070904.56574.ebuild 3853
 MD5 d0c42ef7b94e0aefbe09669b04adca0d files/digest-open-vm-tools-0.0.20070904.56574 295
 RMD160 43e2167130241214052b6fa7a739e80e574363be files/digest-open-vm-tools-0.0.20070904.56574 295
 SHA256 0e711a2915155961282df966b61408929cd10db16623356571bd7597d1b3bb62 files/digest-open-vm-tools-0.0.20070904.56574 295
