@@ -15,26 +15,30 @@ depend() {
 }
 
 start() {
-	if ! grep -q -w vmblock /proc/modules;
+	if "${VM_DRAG_AND_DROP}" == "yes";
 	then
-		ebegin "Loading vmblock module"
-		modprobe vmblock
+
+		if ! grep -q -w vmblock /proc/modules;
+		then
+			ebegin "Loading vmblock module"
+			modprobe vmblock
+			eend $?
+			sleep 0.25
+		fi
+
+		if [[ ! -d "${DND_TMPDIR}" ]];
+		then
+			# einfo "Creating the VM drag and drop directory"
+			mkdir "${DND_TMPDIR}"
+			chown "${USER_GROUP}" "${DND_TMPDIR}"
+			chmod "${DND_TMPDIR_PERMS}" "${DND_TMPDIR}"
+		fi
+
+		# DnD_TMPDIR must exist before vmblock can be mounted
+		ebegin "Mounting vmblock device"
+		mount -t vmblock none ${MOUNTPOINT}
 		eend $?
-		sleep 0.25
 	fi
-
-	if [[ ! -d "${DND_TMPDIR}" ]];
-	then
-		# einfo "Creating the VM drag and drop directory"
-		mkdir "${DND_TMPDIR}"
-		chown "${USER_GROUP}" "${DND_TMPDIR}"
-		chmod "${DND_TMPDIR_PERMS}" "${DND_TMPDIR}"
-	fi
-
-    # DnD_TMPDIR must exist before vmblock can be mounted
-	ebegin "Mounting vmblock device"
-	mount -t vmblock none ${MOUNTPOINT}
-	eend $?
 	
 	ebegin "Starting vmware-guestd"
 	start-stop-daemon --chuid "${USER_GROUP}" --start --quiet --exec ${GUESTD_BIN} -- --background "${PIDFILE}"
@@ -44,24 +48,27 @@ start() {
 stop() {
 	local ret
 	
-	ebegin "Cleaning the contents of ${DND_TMPDIR}"
-	# First check, whether ${DND_TMPDIR} isn valid... we shouldn't risk deleting the content of ""/*
-	if [[ ! -z "${DND_TMPDIR}" ]] && [[ "${DND_TMPDIR}" != "/" ]];
+	if "${VM_DRAG_AND_DROP}" == "yes";
 	then
-		rm -rf ${DND_TMPDIR}/*
-		ret=0
-	else
-		eerror "Not cleaning up ${DND_TMPDIR}, please check definition of variable"
-		ret=1
-	fi
-	eend $ret
+		ebegin "Cleaning the contents of ${DND_TMPDIR}"
+		# First check, whether ${DND_TMPDIR} isn valid... we shouldn't risk deleting the content of ""/*
+		if [[ ! -z "${DND_TMPDIR}" ]] && [[ "${DND_TMPDIR}" != "/" ]];
+		then
+			rm -rf ${DND_TMPDIR}/*
+			ret=0
+		else
+			eerror "Not cleaning up ${DND_TMPDIR}, please check definition of variable"
+			ret=1
+		fi
+		eend $ret
 
-	ebegin "Unmounting vmblock device"
-	if grep -q -w "${MOUNTPOINT}" /proc/mounts;
-	then
-		umount ${MOUNTPOINT} 1>&2 > /dev/null
+		ebegin "Unmounting vmblock device"
+		if grep -q -w "${MOUNTPOINT}" /proc/mounts;
+		then
+			umount ${MOUNTPOINT} 1>&2 > /dev/null
+		fi
+		eend 0
 	fi
-	eend 0
 
 	ebegin "Stopping vmware-guestd"
 	start-stop-daemon --stop --quiet --pidfile "${PIDFILE}"
