@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  23 Sep 2007; Mike Auty <ikelos@gentoo.org>
+  +app-emulation/open-vm-tools/files/open-vm.confd,
+  app-emulation/open-vm-tools/files/open-vm.initd, eclass/vmware.eclass:
+  Add cleanup comments only when product is completely removed. Also allow
+  disabling of DnD in open-vm-tools.
+
   20 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   +app-emulation/vmware-player/files/1.0.5.56455/000_all_initd-location.patc
   h,
